Hide register to fix 1100 width topHeader jump issue

--- a/styles/components/header.less
+++ b/styles/components/header.less
@@ -138,13 +138,11 @@
 					}
 				}
 				// Remove "REGISTER" (if exist)
-				.headerShortcuts {
-					.profile {
-						display: none;
-					}
-					.profile:last-child {
-						display: block;
-					}
+				.profile {
+					display: none !important;
+				}
+				.profile:last-child {
+					display: block !important;
 				}
 			}
 			.task_count {
